--- a/conf.ini
+++ b/conf.ini
@@ -1,7 +1,7 @@
 [main]
 sendurl = https://qyapi.weixin.qq.com/cgi-bin/message/send?access_token=
 get_token = https://qyapi.weixin.qq.com/cgi-bin/gettoken?corpid=
-agid = 10000
+agid = 
 corpid =
 secret =
 
